@@ -1,0 +1,12 @@
+#VRML V2.0 utf8 Titania
+
+DEF Script Script {
+
+  url "vrmlscript:
+function initialize ()
+{
+	print ('URL');
+}
+"
+	field SFFloat metadata 0
+}
