@@ -1,5 +1,9 @@
 2014-04-05  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DBaseNode.cpp: 
+
+2014-04-05  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* TransformTool.x3dv:
 	* CylinderSensor.cpp: 
 
